Updated global.yml with my information

--- a/_data/global.yml
+++ b/_data/global.yml
@@ -1,10 +1,10 @@
 # Site Settings
-title: 'Rich Hildred'
+title: 'Vivek Shyam'
 description: 'My Portfolio Site'
-url: 'https://rhildred.github.io' # the base hostname & protocol for your site
+url: 'https://vmshyam.github.io/jeckyl-blog' # the base hostname & protocol for your site
 footer_text: '&copy; Rich Hildred'
 
 # Admin Settings
-admin_name: 'Rich Hildred'
-admin_email: 'rhildred@conestogac.on.ca'
+admin_name: 'Vivek Shyam'
+admin_email: 'v.shyam@hotmail.com'
 
