--- a/_data/global.yml
+++ b/_data/global.yml
@@ -2,7 +2,7 @@
 title: 'Vivek Shyam'
 description: 'My Portfolio Site'
 url: 'https://vmshyam.github.io/jeckyl-blog' # the base hostname & protocol for your site
-footer_text: '&copy; Rich Hildred'
+footer_text: '&copy; Vivek Shyam'
 
 # Admin Settings
 admin_name: 'Vivek Shyam'
